<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Funktrainer</string>
    <string name="infoMessage">Diese App enthält die Fragen für die Prüfung für den Amateurfunkschein (Fragen von Februar 2007 [Technische Kenntnisse] bzw. Oktober 2006 [Betriebliche Kenntnisse, Kenntnisse von Vorschriften])</string>
    <string name="selectTopic">Bitte wählen sie ein Kapitel:</string>
    <string name="selectSpecialTopic">Eigener Fragenmix:</string>
    <string name="continueButtonText">Weiter</string>
    <string name="skipButtonText">Überspringen</string>
    <string name="waitBeforeContinue">Bitte warten Sie etwas bevor Sie weiter lernen …</string>
    <string name="nextQuestionAt">Die nächste Frage sehen Sie um:</string>
    <string name="continueNow">Jetzt weiter machen …</string>
    <string name="restart">Neu beginnen</string>
    <string name="chapterFinished">Sie haben dieses Kapitel erfolgreich abgeschlossen …</string>
    <string name="offeneFragen">Offene Fragen:</string>
    <string name="nextLabel">Nächste: </string>
    <string name="right">Richtig!</string>
    <string name="done">fertig</string>
    <string name="firstPass">Erster Durchgang</string>
    <string name="secondPass">Zweiter Durchgang</string>
    <string name="thirdPass">Dritter Durchgang</string>
    <string name="fourthPass">Vierter Durchgang</string>
    <string name="fifthPass">Fünfter Durchgang</string>
    <string name="passText">Durchgang: %d</string>
    <string name="noAnswerSelected">Sie müssen zuerst eine Antwort auswählen!</string>
    <string name="menuResetTopic">Kapitel neu beginnen</string>
    <string name="menuResetTopicCondensed">Neu beginnen</string>
    <string name="menuStatistics">Statistik</string>
    <string name="menuHelp">Hilfe</string>
    <string name="menuHelpCondensed">Hilfe</string>
    <string name="menuReportError">Fehler Melden</string>
    <string name="menuReportErrorCondensed">Fehler</string>
    <string name="menuInfo">Prüfungsinfos</string>
    <string name="menuInfoCondensed">Info</string>
    <string name="menuSearch">Frage Suchen</string>
    <string name="menuSearchCondensed">Suche</string>
    <string name="chapter">Kapitel:</string>
    <string name="totalProgress">Gesamtfortschritt:</string>
    <string name="atLevel0">Ohne richtige Antwort:</string>
    <string name="atLevel1">Ein mal richtig:</string>
    <string name="atLevel2">Zwei mal richtig:</string>
    <string name="atLevel3">Drei mal richtig:</string>
    <string name="atLevel4">Vier mal richtig:</string>
    <string name="atLevel5">Fünf mal richtig (fertig):</string>
    <string name="warningReset">Hiermit beginnt die Abfrage dieses Kapitels von vorn.</string>
    <string name="resetOkay">OK</string>
    <string name="resetCancel">Abbrechen</string>
    <string name="title_activity_question_search">Fragen durchsuchen</string>
    <string name="questionSearchInputHint">Durchsuche Fragen …</string>
    <string name="messagePreparing">Verarbeite Fragen …</string>
    <string name="messagePleaseWait">Bitte Warten</string>
    <string name="oldQuestionHeadText">Vorherige Frage</string>
    <string name="backToQuestionButtonText">zurück zur Frage</string>
    <string name="title_activity_lichtblicke_viewer">Lichtblicke A</string>
    <string name="menuShowLichtblick">Lichtblick anzeigen</string>
    <string name="menuShowLichtblickCondensed">Lichtblick</string>
    <string name="menuShowFormelsammlung">Formelsammlung Anzeigen</string>
    <string name="menuShowFormelsammlungCondensed">Formelsammlung</string>
    <string name="menuSettings">Einstellungen</string>
    <string name="menuSettingsCondensed">Einstellungen</string>

    <string name="titleExamActivity">Prüfungssimulation</string>
    <string name="menuExamMode">Prüfungssimulation</string>
    <string name="menuExamModeCondensed">Prüfungssimulation</string>
    <string name="examStartExamButtonText">Prüfung starten</string>
    <string name="examStartHeaderText">Prüfung starten</string>

    <string name="lichtblickeDownloaderMainText">Die Lichtblicke wurden noch nicht heruntergeladen. Um diese Funktionalität zu nutzen einfach mittels des Buttons unten den Download starten.</string>
    <string name="lichtblickeDownloaderWarningText">Achtung: Es werden mehrere Megabyte an Daten heruntergeladen. Sollte dieser Download über das Mobilfunknetz geschehen können Zusatzkosten entstehen.</string>
    <string name="lichtblickeDownloaderLichbtlickADownloadButtonText">Lichtblicke A herunterladen</string>
    <string name="lichtblickeDownloaderDownloadProgressText">lade …</string>
    <string name="lichtblickeDownloaderToastTextSuccess">Download erfolgreich</string>
    <string name="lichtblickeDownloaderToastTextFailure">Download Fehler: </string>
    <string name="lichtblickeDownloaderLinkText">Download von: <a href="http://www.dl9hcg.a36.de/lichtblick.html">http://www.dl9hcg.a36.de/lichtblick.html</a></string>

    <string name="title_activity_settings">Einstellungen</string>
    <string name="pref_header_general">Allgemein</string>
    <string name="pref_title_force_pause">Schlage regelmäßig Pausen vor</string>
    <string name="pref_description_force_pause">Schlage eine Pause vor, wenn eine gewisse Anzahl an Fragen, oder alle offenen Fragen eines Gebiets einmal bearbeitet wurden.</string>

    <string name="pref_waiting_time_reset_alert_title">Wartezeiten zurücksetzen</string>
    <string name="pref_waiting_time_reset_alert_message">Wartezeiten wirklich zurücksetzen?</string>
    <string name="pref_waiting_time_successful_reset">Wartezeiten zurückgesetzt</string>
    <string name="pref_header_waiting_times">Wartezeiten</string>
    <string name="pref_title_waiting_time_on_level_0">Basiswartezeit [s]</string>
    <string name="pref_description_waiting_time_on_level_0">Wartezeit, wenn die Frage noch nicht richtig beantwortet wurde.</string>
    <string name="pref_title_waiting_time_on_level_1">Wartezeit 1 [s]</string>
    <string name="pref_description_waiting_time_on_level_1">Wartezeit bei einmalig richtiger Beantwortung</string>
    <string name="pref_title_waiting_time_on_level_2">Wartezeit 2 [s]</string>
    <string name="pref_description_waiting_time_on_level_2">Wartezeit bei zweimalig richtiger Beantwortung</string>
    <string name="pref_title_waiting_time_on_level_3">Wartezeit 3 [s]</string>
    <string name="pref_description_waiting_time_on_level_3">Wartezeit bei dreimalig richtiger Beantwortung</string>
    <string name="pref_title_waiting_time_on_level_4">Wartezeit 4 [s]</string>
    <string name="pref_description_waiting_time_on_level_4">Wartezeit bei viermalig richtiger Beantwortung</string>
    <string name="pref_title_waiting_time_settings_reset">Wartezeiten zurücksetzen</string>
    <string name="pref_description_waiting_time_settings_reset">Wartezeiten zurücksetzen</string>

    <string name="pref_title_show_skip_button">Fragen überspringen</string>
    <string name="pref_description_show_skip_button">Einen Button zum Überspringen der aktuellen Frage anzeigen.</string>

    <string name="pref_title_count_exam_answer_statistics">Prüfungsantworten zählen mit</string>
    <string name="pref_description_count_exam_answer_statistics">Antworten im Prüfungsmodus gleich wie Antworten im Lernmodus behandeln. Falsche und richtige Antworten im Prüfungsmodus werden in den allgemeinen Statistiken mitgezählt.</string>

    <string name="pref_header_sync_settings">Synchronisation (beta)</string>
    <string name="pref_description_enable_sync">Fortschritt synchronisieren</string>
    <string name="pref_title_enable_sync">Synchronisierung</string>
    <string name="pref_title_sync_now">Jetzt synchronisieren</string>
    <string name="pref_title_sync_force_upload">Hochladen erzwingen</string>
    <string name="pref_sync_now_toast_message">Synchronisierung läuft ...</string>
    <string name="pref_sync_done_toast_message">synchronisiert</string>
    <string name="pref_sync_error_toast_message">Synchronisierungsfehler</string>
    <string name="pref_title_sync_key">API Key</string>
    <string name="pref_title_sync_secret">API Secret</string>
    <string name="pref_sync_force_upload_alert_title">Hochladen erzwingen</string>
    <string name="pref_sync_force_upload_alert_message">Hochladen erzwingen? Dies wird alle auf dem Server gespeicherten Daten überschreiben.</string>
    <string name="pref_title_through_mode">Fertig-werden-Modus</string>
    <string name="pref_description_through_mode">Stelle alle Fragen zuerst nur bis zur zweiten Wiederholung. Dann erst stelle die Fragen nochmals bis zur fünften Wiederholung.</string>

    <string name="pref_ringtone_silent">Stumm</string>
    <string name="exam_simulation">Prüfungssimulation</string>
    <string name="learning">Lernen</string>
    <string name="exam_evaluate">Auswerten</string>
    <string name="exam_report">Prüfungsergebnisse</string>

    <string name="exam_report_result_text">%1$d von %2$d Fragen korrekt beantwortet.</string>
    <string name="correct">Richtig</string>
    <string name="wrong">Falsch</string>
    <string name="exam_result_recommendation_passed">Prüfung bestanden! Auf zur BNetzA!</string>
    <string name="exam_result_recommendation_failed">Schade, das war\'s noch nicht. Zum Bestehen dieses Prüfungsteils müssen 75% erreicht werden.</string>
    <string name="not_answered">nicht bearbeitet</string>
</resources>
