<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_enable_sync"
        android:summary="@string/pref_description_enable_sync"
        android:title="@string/pref_title_enable_sync" />

    <EditTextPreference
        android:defaultValue = ""
        android:key = "pref_sync_key"
        android:title = "@string/pref_title_sync_key"
        android:singleLine="false" />

    <EditTextPreference
        android:defaultValue = ""
        android:key = "pref_sync_secret"
        android:title = "@string/pref_title_sync_secret"
        android:singleLine="false" />

    <Preference
        android:title = "@string/pref_title_sync_now"
        android:key = "pref_sync_now" />

</PreferenceScreen>
