<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lichtblicke_downloader"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hosenhasser.funktrainer.LichtblickeViewerActivity">


    <TextView
        android:text="@string/lichtblickeDownloaderMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/lichtblickeDownloaderLinkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lichtblickeDownloaderLinkTextView"
        android:autoLink="web" />

    <TextView
        android:text="@string/lichtblickeDownloaderWarningText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/lichtblickeDownloaderLichbtlickADownloadButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lichtblickADownloadButton" />




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:id="@+id/lichtblickDownloadProgress">

        <TextView
            android:text="@string/lichtblickeDownloaderDownloadProgressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lichtblickeDownloaderProgressBar"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>