<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="6dp"
        android:text="@string/waitBeforeContinue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="6dp"
        android:text="@string/nextQuestionAt" />

    <TextView
        android:id="@+id/nextTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_margin="6dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/resetWait"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/continueNow" />

</LinearLayout>
